# eye_track

./: README.md  pipeline.py  runall.sh
datacollection/DataCollection/: AppDelegate.h  AppDelegate.m  CustomView.h  CustomView.m  Info.plist  VideoViewController.h  VideoViewController.m  main.m
datacollection/DataCollection.xcodeproj/: project.pbxproj
datacollection/DataCollection.xcodeproj/project.xcworkspace/xcuserdata/Brinck.xcuserdatad/: UserInterfaceState.xcuserstate
datacollection/DataCollection.xcodeproj/xcuserdata/Brinck.xcuserdatad/xcschemes/: DataCollection.xcscheme  xcschememanagement.plist
datacollection/DataCollection/Base.lproj/: Main.storyboard
datacollection/DataCollectionTests/: DataCollectionTests.m  Info.plist
preprocessing/: saliencyRunEyes.m
preprocessing/src/: CMakeLists.txt  constants.h  detect.cpp  detect.h  findEyeCenter.cpp  haar.cpp  haar.h  helpers.cpp  helpers.h  main.cpp  maps.cpp  maps.h  readme.md  saliency.cpp  saliency.h  slic.cpp
